fix: songlist not showing every element. refactor: improve how songslist and related classes interact

--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -1,12 +1,10 @@
 @use '@assets/styles/index.scss' as idx;
 
 .Search {
-  display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: min-content min-content 100%;
+  display: flex;
+    flex-direction: column;
 
-  margin-inline: idx.$general-padding; 
-  height: calc(100vh - 5.1rem);
+  margin-inline-end: idx.$general-padding;
 }
 
 .Search--navbar {
@@ -18,9 +16,9 @@
 
 .Search__results--playlist {
   height: calc(100% - 14.2rem);
-
+  overflow-y: scroll;
   .SongsList {
-        padding-block-end: 6.2rem;
+        padding-block-end: 7.8rem;
   }
 }
 
@@ -32,6 +30,7 @@
 
   width: 100%;
     margin-block: idx.$general-padding;
+    padding-inline-start: idx.$general-padding;
 
   input {
     width: 100%;
@@ -53,5 +52,6 @@
     justify-content: space-between;
     align-items: center;
 
+  margin-inline-start: idx.$general-padding;
   margin-block-end: 1.6rem;
 }
