--- a/src/components/Sections.scss
+++ b/src/components/Sections.scss
@@ -4,8 +4,6 @@
   position: relative;
     z-index: 200;
 
-  border-bottom: 1px solid white;
-
   ul {
     display: flex;
       justify-content: space-around;
