--- a/src/components/Songs.scss
+++ b/src/components/Songs.scss
@@ -2,17 +2,15 @@
 
 .Songs {
   position: relative;
-  height: 100%;
-
-  .SongsList {
-    height: calc(100% - 6.7rem);
-  }
+  height: min-content;
 }
 
 .Songs__header {
   position: sticky;
     top: 0;
     z-index: 1;
+
+  border-top: 1px solid white;
 }
 
 .Songs__header-info {
