--- a/src/components/TrackCard.scss
+++ b/src/components/TrackCard.scss
@@ -30,8 +30,6 @@ $icons-size-current: calc($icons-size - 1rem);
     justify-content: space-between;
 
   width: 100%;
-    margin-block: 1.4rem;
-    padding-inline-start: idx.$general-padding;
 
   // outline: 2px solid red;
   cursor: pointer;
